samples/_failures_safe/1761337597_e428d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d204422.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_1d204422.c:134:5: error: expected expression at end of input
  134 |     for (int i = 0; i < V;
      |     ^~~
./samples/SAFE/__tmp_1d204422.c:134:5: error: expected declaration or statement at end of input
